Futzing around with zephyr.

--- a/fw/barkbit-nrfsdk/hello_world/prj.conf
+++ b/fw/barkbit-nrfsdk/hello_world/prj.conf
@@ -8,8 +8,8 @@ CONFIG_LOG_BACKEND_RTT=y
 CONFIG_I2C=y
 CONFIG_I2C_0=y
 CONFIG_I2C_LOG_LEVEL_DBG=y
-CONFIG_SENSOR=y
-CONFIG_SENSOR_LOG_LEVEL_DBG=y
+#CONFIG_SENSOR=y
+#CONFIG_SENSOR_LOG_LEVEL_DBG=y
 CONFIG_I2C_INIT_PRIORITY=60
 #BOARD_ENABLE_DCDC=n
 #CONFIG_FXOS8700=y
